--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,52 @@
-drivers/
-bin/
+#settings
+.settings/
+
+#metadata
+.metadata/
+
+#Debug
 Debug/
+debug/
+Release/
+release
+
+# Prerequisites
+*.d
+
+# Object files
 *.o
-*.dll
+*.ko
+*.obj
 *.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
 *.hex
+*.bin
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
